--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@
 
 }
 section{
-    height: 700px;
+    height: 800px;
+    
+}
+.biodataofmy{
+    background-image: url(/biography-bg.png);
+    background-repeat: no-repeat;
 }
 body{
     font-family: 'Roboto', sans-serif;
@@ -40,7 +45,7 @@ body{
     height: 100%;
 }
 .textone img{
-    width:100%;
+    width:80%;
     margin-right:300px;
     
 }
@@ -60,8 +65,9 @@ body{
     height: 100%;
 }
 .textone0 img{
-    width:100%;
+    width:40%;
     margin-right:300px;
+    height: 100%;
     
 }
 
@@ -69,6 +75,7 @@ body{
     color: #EC4C7A;
     font-size: 40px;
     margin-top: 90px;
+    height: 100%;
 }
 #thisisp{
     margin-top: 40px;
@@ -82,14 +89,86 @@ body{
     margin-left: 5%; 
     padding-left: 3%;
     margin-top: 100px;
-    height: 100%;
+    
 }
 .textone1 img{
     width:100%;
     margin-right:300px;
     
 }
+.experience-area{
+
+        width: 300%;
+        float: left;
+        margin: 5%; 
+        padding: 15px;
+        margin-top: 100px;
+        height: 100%;
+}
+.experience-area img{
+        width:10%;
+        float: left;
+        
+}
+#mylastest1{
+    margin-top: 20px;
+    padding: 20px;
+    margin-left: 600px;
+    font-size: 45px;
+    margin-bottom: 30px;
+}
+.the-last-section{
+        float: left;
+        margin: 5%; 
+        padding: 15px;
+        margin-top: 100px;
+        height: 100%;
+}
+.client{
     
+        margin-top: 10px;
+        padding: 10px;
+        margin-left: 600px;
+        font-size: 30px;
+        margin-bottom: 20px;
+        font-weight:600 ;
+}
+.ceo{
+     padding: 10px;
+    margin-left: 700px;
+    font-size: 20px;
+    font-weight: 500;
+    
+}
+.founder{
+    margin-left: 640px;
+    font-size: 15px;
+}
+.gibon-er-last {
+    padding: 10px;
+   margin-left: 520px;  
+   background-color: #f54a7a;
+   padding: 50px;
+   border-radius: 20px;
+   margin-top: 20px;
+}
+.gibon-er-last a{
+    text-decoration: none;
+    font-size: 30px;
+    text-align: center;
+    color: white;
+    margin-left: 20px;
+}
+.gibon-er-last p{
+    font-size: 10px;
+    text-align: center;
+    color: white;
+    margin-left: 10px;
+    font-size: 15px;
+}
+
+
+
     
     
 
