--- a/style.css
+++ b/style.css
@@ -97,16 +97,21 @@ body{
     
 }
 .experience-area{
+    height: 800px;
+}
+.experience-area{
 
-        width: 300%;
+        width: 100%;
         float: left;
         margin: 5%; 
         padding: 15px;
         margin-top: 100px;
         height: 100%;
+        background-image: url(/latest-work-bg.png);
+        background-repeat: no-repeat;
 }
 .experience-area img{
-        width:10%;
+        width:32%;
         float: left;
         
 }
