--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ section{
     
 }
 .biodataofmy{
-    background-image: url(/biography-bg.png);
+    background-image: url(biography-bg.png);
     background-repeat: no-repeat;
 }
 body{
@@ -33,7 +33,7 @@ body{
     margin-bottom: 40px;
 }
 .amisection{
-    background-image: url(/header-bg.png);
+    background-image: url(header-bg.png);
     background-repeat: no-repeat;
 }
 .textone{
@@ -50,7 +50,7 @@ body{
     
 }
 .biodataofmy{
-    background-image: url(/biography-bg.png);
+    background-image: url(biography-bg.png);
     background-repeat: no;
     width: 100%;
     height: 100%;
@@ -106,8 +106,8 @@ body{
         margin: 5%; 
         padding: 15px;
         margin-top: 100px;
-        height: 100%;
-        background-image: url(/latest-work-bg.png);
+        height: 800px;
+        background-image: url(latest-work-bg.png);
         background-repeat: no-repeat;
 }
 .experience-area img{
